package com.lib.furniture;

/**
 * Enum type for colors
 * @author Barış Ayyıldız 
 */

public enum Color {

	RED,
	GREEN,
	BLUE,
	ORANGE,
	YELLOW,
	NONE
	
}
